# bass_backend

./: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 000_base.py  001_realtime.py  002_auth_settings.py  003_auth_settings.py  004_notifications.py  005_billing_flutterwave.py  006_fix_subscriptions.py
app/: config.py  dependencies.py  main.py
app/api/: router.py
app/api/admin_api/: _audit.py  audit.py  billing.py  metrics.py  middleware.py  organizations.py  router.py  storage.py  users.py
app/api/internal/: auth_browse.py  auth_settings.py  billing.py  billing_browse.py  functions_browse.py  nosql_browse.py  notifications.py  realtime_browse.py  realtime_data.py  router.py  settings_browse.py  sql_browse.py  storage_browse.py  usage_browse.py
app/api/superadmin/: _audit.py  audit.py  billing.py  flags.py  metrics.py  organizations.py  projects.py  router.py  staff.py  users.py
app/api/v1/ai/: router.py
app/api/v1/auth/: router.py
app/auth/: project_auth.py  staff_auth.py
app/db/: mongo.py  postgres.py  redis.py
app/engines/: __init__.py  function_runner.py  metrics_engine.py  nosql_engine.py  permission_engine.py  query_engine.py  realtime_engine.py  storage_engine.py  vector_engine.py
app/middleware/: api_key.py  rate_limit.py  staff_auth.py  usage_limit.py
app/models/: permissions.py  requests.py  responses.py  staff.py
app/provisioner/: nosql_provisioner.py  sql_provisioner.py
app/storage/: minio.py
app/tasks/: celery_app.py  invoice_gen.py  usage_sync.py
(+5 files in other folders)
